# generic_jupyter_torch

./: LICENSE  conda.yaml  pyproject.toml
